--- a/src/app/Home/components/stats-card/stats-card.component.html
+++ b/src/app/Home/components/stats-card/stats-card.component.html
@@ -1,4 +1,4 @@
-<div class="stats-card">
+<div class="stats-card" [ngClass]="customClass">
     <div class="stats-card__icon">
         <img src="{{src}}" alt="icons stats">
     </div>
