--- a/src/app/Home/components/hero/hero.component.scss
+++ b/src/app/Home/components/hero/hero.component.scss
@@ -1,18 +1,34 @@
+@import './../../../styles/mixins';
+
 .hero{
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    @include responsive(1200px){
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 40px;
+    }
     .hero__illustration{
         width: 130%;
         position: relative;
         right: -80px;
+        @include responsive(1200px){
+            width: 50%;
+            right: -150px;
+        }
     }
     .hero__text{
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        @include responsive(1200px){
+            width: 40%;
+            text-align: left;
+        }
         h1{
             font-size: 40px;
             font-weight: 700;
