--- a/src/app/Home/components/input-link/input-link.component.scss
+++ b/src/app/Home/components/input-link/input-link.component.scss
@@ -1,3 +1,5 @@
+@import './../../../styles/mixins';
+
 .input-link{
     display: flex;
     flex-direction: column;
@@ -15,6 +17,9 @@
         z-index: 0;
         right: 0;
         top: 0;
+        @include responsive(1200px){
+            width: 100%;
+        }
     }
     .input-link__form{
         z-index: 1;
@@ -22,14 +27,25 @@
         flex-direction: column;
         align-items: center;
         width: 90%;
+        @include responsive(1200px){
+            flex-direction: row;
+        }
         form{
             width: 100%;
+            @include responsive(1200px){
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
         }
         .input-link__error{
             color: var(--red);
             font-size: 14px;
             margin-top: 5px;
             width: fit-content;
+            @include responsive(1200px){
+                text-align: center;
+            }
         }
     }
     .input-link__input{
@@ -46,6 +62,9 @@
         &:focus{
             outline: none;
         }
+        @include responsive(1200px){
+            width: 75%;
+        }
     }
     .input-link__button{
         width: 100%;
@@ -57,5 +76,9 @@
         margin-top: 20px;
         font-size: 18px;
         font-weight: 700;
+        @include responsive(1200px){
+            width: 20%;
+            margin-top: 0;
+        }
     }
 }
