--- a/src/app/Home/components/statistics/statistics.component.html
+++ b/src/app/Home/components/statistics/statistics.component.html
@@ -2,10 +2,12 @@
     <div class="statistics__text" [ngStyle]="linksStorage.length > 0 ? {'margin-top': '50px'} : {'margin-top': '150px'}">
         <h2>Advanced Statistics</h2>
         <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
+    </div>
+    <div class="statistics__cards">
+        <app-stats-card [src]="'icon-brand-recognition.svg'" [title]="'Brand Recognition'" [description]="'Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.'" [customClass]="'statistics__card--first'"/>
+        <div class="statistics__divider statistics__divider--first"></div>
+        <app-stats-card [src]="'icon-detailed-records.svg'" [title]="'Detailed Records'" [description]="'Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.'" [customClass]="'statistics__card--second'"/>
+        <div class="statistics__divider statistics__divider--second"></div>
+        <app-stats-card [src]="'icon-fully-customizable.svg'" [title]="'Fully Customizable'" [description]="'Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.'" [customClass]="'statistics__card--third'"/>
     </div> 
-    <app-stats-card [src]="'icon-brand-recognition.svg'" [title]="'Brand Recognition'" [description]="'Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.'"/>
-    <div class="statistics__divider"></div>
-    <app-stats-card [src]="'icon-detailed-records.svg'" [title]="'Detailed Records'" [description]="'Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.'"/>
-    <div class="statistics__divider"></div>
-    <app-stats-card [src]="'icon-fully-customizable.svg'" [title]="'Fully Customizable'" [description]="'Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.'"/>
 </section>
