--- a/src/app/Home/components/statistics/statistics.component.scss
+++ b/src/app/Home/components/statistics/statistics.component.scss
@@ -1,3 +1,5 @@
+@import './../../../styles/mixins';
+
 .statistics{
     background-color: var(--gray);
     display: flex;
@@ -5,6 +7,17 @@
     align-items: center;
     width: 100%;
     padding-bottom: 30px;
+    
+    .statistics__cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        @include responsive(1200px){
+            flex-direction: row;
+        }
+    }
+    
     .statistics__text{
         margin-top: 150px;
         width: 80%;
@@ -18,5 +31,14 @@
         width: 10px;
         height: 100px;
         background-color: var(--cyan);
+        @include responsive(1200px){
+            height: 10px;
+            width: 500px;
+        }
+    }
+    .statistics__divider--second,.statistics__cards--second{
+        @include responsive(1200px){
+            margin-top: 50px;
+        }
     }
 }
