--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import './app/styles/mixins';
+
 :root{
     //Colors primary
     --cyan: hsl(180, 66%, 49%);
@@ -25,9 +27,4 @@ body{
     font-weight: 500;
 }
 
-@mixin responsive($width) {
-    @media only screen and (min-width: $width) {
-        @content;
-    }
-}
 
